--- a/index.html
+++ b/index.html
@@ -7,8 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>ระบบการจอง</div>
-    
+    <div>
+    <div class="narbar"><!--narbar-->
+        <h3>ตั๋วเครื่องบิน+ที่พัก</h3>
+        <h3>ที่พัก</h3>
+        <div>
+            <h3>บริการเดินทางขนส่ง</h3>
+        <select name="" id="">
+            <option value="">ตั๋วเครื่องบิน</option>
+            <option value="">รถบัส</option>
+            <option value="">รถไฟ</option>
+            <option value="">เรือเฟอร์รารี่</option>
+            <option value="">บริการรับส่งสนามบิน</option>
+            <option value="">บริการเช่ารถ</option>
+        </select>
+        <h3>เข้าสู่ระบบ</h3>
+        </div>
+    </div>
+    <div>
 </body>
 <script src="app.js"></script>
 </html>
