--- a/index.html
+++ b/index.html
@@ -21,7 +21,28 @@
             <option value="">บริการรับส่งสนามบิน</option>
             <option value="">บริการเช่ารถ</option>
         </select>
+        <div>
+        <img src="image/more.png" width="35" height="35" >
+        </div>
+        <div>
+        <img src="image/thailand.png"width="35" height="35">
+        </div>
+        <div>
+        <img src="image/bath.png" width="35" height="35">
+        </div>
+        <div>
         <h3>เข้าสู่ระบบ</h3>
+        </div>
+        <div>
+        <h3>สมัครสมาชิก</h3>
+        </div>
+        <div>
+        <div>
+        <img src="image/shopping-cart.png" width="35" height="35">
+        </div>
+        <div>
+        <img src="image/open-menu.png" width="35" height="35">
+        </div>
         </div>
     </div>
     <div>
